--- a/styles/style.css
+++ b/styles/style.css
@@ -132,3 +132,6 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
+
+body {
+  background: #b9dde7; }
