--- a/styles/style.css
+++ b/styles/style.css
@@ -135,3 +135,24 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 
 body {
   background: #b9dde7; }
+
+.header-nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.header-nav__list-item {
+  padding: 5px; }
+
+.header-nav__link-item {
+  text-decoration: none; }
+  .header-nav__link-item--brand {
+    font-size: 20px;
+    text-decoration: none; }
