added heading h1 for SEO

--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -1,10 +1,10 @@
 @mixin primary-font($size-value) {
     font-size: $size-value;
-    color: ;
+    color: white;
 }
 
 @mixin secondary-font($size-value) {
     font-size: $size-value;
-    color: ;
+    color: white;
 }
 
