--- a/styles/style.css
+++ b/styles/style.css
@@ -156,3 +156,6 @@ body {
   .header-nav__link-item--brand {
     font-size: 20px;
     text-decoration: none; }
+
+.emblem .slogan {
+  display: none; }
