--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,4 +2,5 @@
 @import 'partials/global';
 @import 'partials/variables';
 @import 'partials/landing-header';
-@import 'partials/mixins';
+@import 'partials/about';
+@import 'partials/overview';
