--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,3 +5,6 @@
 @import 'partials/about';
 @import 'partials/overview';
 @import 'partials/blog-highlights';
+@import 'partials/journey';
+@import 'partials/gallery';
+@import 'partials/footer';
