--- a/styles/partials/_blog-article.scss
+++ b/styles/partials/_blog-article.scss
@@ -1,12 +1,20 @@
 .article-main {
-    
-    background-color: pink;    
+    // background-color: blue;    
     margin-left: 5%;
     width: 65%;
 }
 
 .article {
+    background-color: #fff;
     padding: 3%;
+    margin-bottom: 15px;
+    border-bottom: 4px solid $tertiary-color;
+    &__title {
+        @include secondary-font(32px);
+    }
+    &__text {
+        @include primary-font(20px);
+    }
 }
 
 
@@ -15,6 +23,33 @@
     margin: 15px 0;
     &__user {
         margin: 10px 0;
-        background-color: purple;    
+        background-color: purple;  
+        padding: 3%;  
+        display: flex;
+        &:last-child {
+            border-bottom: 4px solid $tertiary-color;
+        }
+    }
+
+    &__image {
+        width: 15%;
+        &--profile {
+            width: 100%;
+            display: block;
+        }
+    }
+
+    &__content {
+        width: 82%;
+        margin-left: 3%;
+    }
+
+    &__title {
+        @include primary-font(20px);
+    }
+
+    &__text {
+        @include primary-font(20px);
+        margin: 0;
     }
 }
