--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,7 @@
 @import 'partials/setup';
 @import 'partials/global';
 @import 'partials/variables';
+@import 'partials/mixins';
 @import 'partials/landing-header';
 @import 'partials/about';
 @import 'partials/overview';
@@ -10,3 +11,5 @@
 @import 'partials/footer';
 @import 'partials/blog-bio';
 @import 'partials/blog-article';
+@import 'partials/form';
+@import 'partials/contact';
