--- a/styles/partials/_blog-article.scss
+++ b/styles/partials/_blog-article.scss
@@ -53,3 +53,12 @@
         margin: 0;
     }
 }
+
+@media (max-width: 768px) {
+    .article-main {
+        display: block;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+    }
+}
