--- a/styles/partials/_about.scss
+++ b/styles/partials/_about.scss
@@ -36,3 +36,28 @@
     }
 }
 
+// button
+@media (max-width: 1200px) {
+    .bio {
+        width: 56%;
+        padding: 3%;
+        &__button {
+            width: 40%;
+        }
+    }
+
+
+}
+
+// mobile
+@media (max-width: 768px) {
+    .bio {
+        width: 100%;
+        padding: 3%;
+        &__button {
+            width: 40%;
+        }
+    }
+
+
+}
