--- a/styles/partials/_landing-header.scss
+++ b/styles/partials/_landing-header.scss
@@ -50,7 +50,7 @@
 .profile-pic {
     border: 1px solid purple;
     // display: inline-block;
-    width: 400px;
+    width: 38%;
     position: absolute;
     top: 10%;
     left: 0;
@@ -67,13 +67,13 @@
     margin-left: 45%;
     margin-top: 20%;
     position: relative;
-}
-
-.blogger {
     &--name {
-    @include quaternary-font(120px);
+        @include quaternary-font(120px);
     }
 }
+
+
+    
 
 .emblem {
     position: absolute;
@@ -87,3 +87,80 @@
     display: none;
 }
 
+@media (max-width: 1080px) {
+    .blogger {
+        margin-left: 39%;
+    }
+}
+
+@media (max-width: 900px) {
+    .blogger {
+        margin-left: 39%;
+        &--name {
+            @include quaternary-font(100px);
+        }
+    }
+}
+
+
+@media (max-width: 768px) {
+    .blogger {
+        margin-left: 39%;
+        &--name {
+            @include quaternary-font(80px);
+        }
+    }
+}
+
+@media (max-width: 590px) {
+    .blogger {
+        
+        margin-left: 39%;
+        &--name {
+            @include quaternary-font(70px);
+            position: static;
+        }
+    }
+    .emblem {
+        bottom: 28%;
+    }
+}
+
+@media (max-width: 500px) {
+    .blogger {
+        
+        margin-left: 39%;
+        &--name {
+            @include quaternary-font(70px);
+            position: static;
+        }
+    }
+    .emblem {
+        bottom: 28%;
+    }
+}
+
+
+@media (max-width: 530px) {
+    .profile-pic {
+        border: 1px solid purple;
+        width: 48%;
+        position: absolute;
+        top: 10%;
+        left: 80px;
+    }
+    .header-content {
+        height: 80vh;
+    }
+    .blogger {
+        margin-left: 4%;
+        margin-top: 38%;
+    }
+
+    .blogger--name {
+        position: static;
+    }
+    .emblem {
+        bottom: 24px;
+    }
+}
