--- a/styles/partials/_overview.scss
+++ b/styles/partials/_overview.scss
@@ -50,6 +50,15 @@
     }
 }
 
-
+// mobile
+@media (max-width: 530px) {
+    .overview {
+        &--photos, &--about, &--blog, &--contact {
+            border: 1px solid black;
+            width: 100%;
+            padding-bottom: 3%;
+        }
+    }
+}
 
 
