--- a/styles/style.css
+++ b/styles/style.css
@@ -166,6 +166,18 @@ a {
 body {
   background-color: pink; }
 
+@media (max-width: 1080px) {
+  .wrapper {
+    width: 90%; } }
+
+@media (max-width: 768px) {
+  .wrapper {
+    width: 90%; } }
+
+@media (max-width: 480px) {
+  .wrapper {
+    width: 100%; } }
+
 .header {
   background-color: #b9dde7;
   height: 80vh;
@@ -229,7 +241,7 @@ body {
 
 .profile-pic {
   border: 1px solid purple;
-  width: 400px;
+  width: 38%;
   position: absolute;
   top: 10%;
   left: 0; }
@@ -245,15 +257,14 @@ body {
   margin-left: 45%;
   margin-top: 20%;
   position: relative; }
-
-.blogger--name {
-  font-family: 'Oswald', sans-serif;
-  font-size: 120px;
-  color: #171717;
-  font-weight: bold;
-  letter-spacing: 1px;
-  line-height: 92px;
-  text-transform: uppercase; }
+  .blogger--name {
+    font-family: 'Oswald', sans-serif;
+    font-size: 120px;
+    color: #171717;
+    font-weight: bold;
+    letter-spacing: 1px;
+    line-height: 92px;
+    text-transform: uppercase; }
 
 .emblem {
   position: absolute;
@@ -264,6 +275,81 @@ body {
 
 .seo {
   display: none; }
+
+@media (max-width: 1080px) {
+  .blogger {
+    margin-left: 39%; } }
+
+@media (max-width: 900px) {
+  .blogger {
+    margin-left: 39%; }
+    .blogger--name {
+      font-family: 'Oswald', sans-serif;
+      font-size: 100px;
+      color: #171717;
+      font-weight: bold;
+      letter-spacing: 1px;
+      line-height: 92px;
+      text-transform: uppercase; } }
+
+@media (max-width: 768px) {
+  .blogger {
+    margin-left: 39%; }
+    .blogger--name {
+      font-family: 'Oswald', sans-serif;
+      font-size: 80px;
+      color: #171717;
+      font-weight: bold;
+      letter-spacing: 1px;
+      line-height: 92px;
+      text-transform: uppercase; } }
+
+@media (max-width: 590px) {
+  .blogger {
+    margin-left: 39%; }
+    .blogger--name {
+      font-family: 'Oswald', sans-serif;
+      font-size: 70px;
+      color: #171717;
+      font-weight: bold;
+      letter-spacing: 1px;
+      line-height: 92px;
+      text-transform: uppercase;
+      position: static; }
+  .emblem {
+    bottom: 28%; } }
+
+@media (max-width: 500px) {
+  .blogger {
+    margin-left: 39%; }
+    .blogger--name {
+      font-family: 'Oswald', sans-serif;
+      font-size: 70px;
+      color: #171717;
+      font-weight: bold;
+      letter-spacing: 1px;
+      line-height: 92px;
+      text-transform: uppercase;
+      position: static; }
+  .emblem {
+    bottom: 28%; } }
+
+@media (max-width: 530px) {
+  .profile-pic {
+    border: 1px solid purple;
+    width: 48%;
+    position: absolute;
+    top: 10%;
+    left: 80px; }
+  .header-content {
+    height: 80vh; }
+  .blogger {
+    margin-left: 4%;
+    margin-top: 38%; }
+  .blogger--name {
+    position: static; }
+  .emblem {
+    bottom: 24px; } }
 
 .intro-bio {
   background-color: #f6f6f6; }
@@ -316,6 +402,20 @@ body {
     display: inline-block;
     width: 30%;
     text-align: center; }
+
+@media (max-width: 1200px) {
+  .bio {
+    width: 56%;
+    padding: 3%; }
+    .bio__button {
+      width: 40%; } }
+
+@media (max-width: 768px) {
+  .bio {
+    width: 100%;
+    padding: 3%; }
+    .bio__button {
+      width: 40%; } }
 
 .overview {
   background-color: #f6f6f6; }
@@ -381,6 +481,12 @@ body {
     font-size: 20px;
     color: #171717;
     line-height: 32px; }
+
+@media (max-width: 530px) {
+  .overview--photos, .overview--about, .overview--blog, .overview--contact {
+    border: 1px solid black;
+    width: 100%;
+    padding-bottom: 3%; } }
 
 .blog-top {
   display: -webkit-box;
@@ -667,10 +773,7 @@ body {
     display: block;
     width: 100%;
     padding: 0;
-    margin: 0; }
-  .comment {
-    display: block;
-    width: 100%; } }
+    margin: 0; } }
 
 @media (max-width: 623px) {
   .blog-bio__image {
@@ -684,6 +787,15 @@ body {
 @media (max-width: 480px) {
   .blog-bio__image {
     width: 90%; } }
+
+/* mobile view for ~320px*/
+@media (max-width: 430px) {
+  .blog-bio {
+    display: block;
+    width: 100%; }
+    .blog-bio__image {
+      display: block;
+      width: 100%; } }
 
 .article-main {
   margin-left: 5%;
@@ -744,6 +856,25 @@ body {
     margin: 0;
     padding: 0;
     width: 100%; } }
+
+/* mobile view */
+@media (max-width: 480px) {
+  .comment {
+    margin: 0;
+    padding: 0; }
+    .comment__user {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; }
+    .comment__image {
+      padding: 3%;
+      width: 100%; }
+      .comment__image--profile {
+        width: 89px; }
+    .comment__content {
+      width: 100%;
+      display: block; } }
 
 input, label {
   padding: 0;
