--- a/styles/partials/_overview.scss
+++ b/styles/partials/_overview.scss
@@ -51,12 +51,12 @@
 }
 
 // mobile
-@media (max-width: 530px) {
+@media (max-width: 768px) {
     .overview {
         &--photos, &--about, &--blog, &--contact {
             border: 1px solid black;
             width: 100%;
-            padding-bottom: 3%;
+            padding: 3%;
         }
     }
 }
